# Among-llms

./: .dockerignore  .gitattributes  Dockerfile  README.md  app.py  pyproject.toml
agentforge_env/: inference.py  models.py  reward.py  serialization.py
agentforge_env/server/: app.py  environment.py  ui.py
agentforge_env/server/static/: agentforge.css  agentforge.js
agentforge_env/server/templates/: agentforge.html
animate-rollouts/scripts/: convert_eval_to_fight.py
animate-rollouts/src/: types.ts
animate-rollouts/src/compositions/: RolloutWrestling.tsx
animate-rollouts/src/data/: default-match.ts
data/: generate_synthetic_holdout.py  seed_episodes_extra.json
demo/: app.py
eval/: evaluate_predictions.py  run_baseline.py  run_model.py
hf_space/: Dockerfile  README.md
hf_space/demo/: app.py
outputs/: attacker_archive.jsonl
outputs/rl_grpo_05b_v2/checkpoint-80/: trainer_state.json
train/: make_false_negative_overfit_dataset.py  make_safe_bias_dataset.py  reward_fn.py  rl_train_openenv.ipynb  rl_train_openenv.py  rl_train_trl.py
